--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -361,6 +361,7 @@
 	"biome.betternether.nether_mushroom_forest": "Nether Mushroom Forest",
 	"biome.betternether.nether_mushroom_forest_edge": "Nether Mushroom Forest Edge",
 	"biome.betternether.wart_forest_edge": "Wart Forest Edge",
+	"biome.betternether.sulfuric_bone_reef": "Sulfuric Bone Reef",
 	"biome.betternether.bone_reef": "Bone Reef",
 	"biome.betternether.poor_grasslands": "Poor Grasslands",
 	"biome.betternether.nether_swampland": "Nether Swampland",
