--- a/src/main/resources/assets/betternether/lang/ru_ru.json
+++ b/src/main/resources/assets/betternether/lang/ru_ru.json
@@ -359,7 +359,8 @@
 	"biome.betternether.nether_mushroom_forest": "Адский грибной лес",
 	"biome.betternether.nether_mushroom_forest_edge": "Окраина адского грибного леса",
 	"biome.betternether.wart_forest_edge": "Ораина наростового леса",
-	"biome.betternether.bone_reef": "Костяные рифы",
+	"biome.betternether.bone_reef": "Костяной риф",
+	"biome.betternether.sulfuric_bone_reef": "Серный костяной риф",
 	"biome.betternether.poor_grasslands": "Обеднённые луга",
 	"biome.betternether.nether_swampland": "Адское болото",
 	"biome.betternether.nether_swampland_terraces": "Террасированное адское болото",
