Swapland grass, retexturing, willow bushes, new swampland terrain

--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -621,5 +621,7 @@
 	"block.betternether.netherite_fire_bowl": "Netherite Fire Bowl",
 	"block.betternether.cincinnasite_fire_bowl_soul": "Soul Cincinnasite Fire Bowl",
 	"block.betternether.bricks_fire_bowl_soul": "Soul Bricks Fire Bowl",
-	"block.betternether.netherite_fire_bowl_soul": "Soul Netherite Fire Bowl"
+	"block.betternether.netherite_fire_bowl_soul": "Soul Netherite Fire Bowl",
+	
+	"block.betternether.swampland_grass": "Swampland Grass"
 }
