--- a/src/main/resources/assets/betternether/lang/ru_ru.json
+++ b/src/main/resources/assets/betternether/lang/ru_ru.json
@@ -619,5 +619,7 @@
 	"block.betternether.netherite_fire_bowl": "Незеритовая огненная чаша",
 	"block.betternether.cincinnasite_fire_bowl_soul": "Цинцинназитовая огненная чаша души",
 	"block.betternether.bricks_fire_bowl_soul": "Кирпичная огненная чаша души",
-	"block.betternether.netherite_fire_bowl_soul": "Незеритовая огненная чаша души"
+	"block.betternether.netherite_fire_bowl_soul": "Незеритовая огненная чаша души",
+	
+	"block.betternether.swampland_grass": "Болотный дёрн"
 }
