Basalt slab, mushrooms generation

--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -623,5 +623,6 @@
 	"block.betternether.bricks_fire_bowl_soul": "Soul Bricks Fire Bowl",
 	"block.betternether.netherite_fire_bowl_soul": "Soul Netherite Fire Bowl",
 	
-	"block.betternether.swampland_grass": "Swampland Grass"
+	"block.betternether.swampland_grass": "Swampland Grass",
+	"block.betternether.basalt_slab": "Basalt Slab"
 }
