--- a/src/main/resources/assets/betternether/lang/ru_ru.json
+++ b/src/main/resources/assets/betternether/lang/ru_ru.json
@@ -621,5 +621,6 @@
 	"block.betternether.bricks_fire_bowl_soul": "Кирпичная огненная чаша души",
 	"block.betternether.netherite_fire_bowl_soul": "Незеритовая огненная чаша души",
 	
-	"block.betternether.swampland_grass": "Болотный дёрн"
+	"block.betternether.swampland_grass": "Болотный дёрн",
+	"block.betternether.basalt_slab": "Базальтовая плита"
 }
