--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -646,5 +646,9 @@
 	"block.betternether.sign_anchor_tree": "Anchor Tree Sign",
 	"block.betternether.striped_bark_anchor_tree": "Anchor Tree Striped Bark",
 	"block.betternether.striped_log_anchor_tree": "Anchor Tree Striped Log",
-	"block.betternether.taburet_anchor_tree": "Anchor Tree Taburet"
+	"block.betternether.taburet_anchor_tree": "Anchor Tree Taburet",
+	
+	"block.betternether.anchor_tree_vine": "Anchor Tree Vine",
+	"block.betternether.anchor_tree_leaves": "Anchor Tree Leaves",
+	"block.betternether.anchor_tree_sapling": "Anchor Tree Sapling"
 }
