--- a/src/main/resources/assets/betternether/lang/ru_ru.json
+++ b/src/main/resources/assets/betternether/lang/ru_ru.json
@@ -676,5 +676,10 @@
 	"block.betternether.taburet_nether_sakura": "Табурет из сакуры",
 	
 	"block.betternether.nether_sakura_leaves": "Листья сакуры нижнего мира",
-	"block.betternether.nether_sakura_sapling": "Саженец сакуры нижнего мира"
+	"block.betternether.nether_sakura_sapling": "Саженец сакуры нижнего мира",
+	
+	"block.betternether.ceiling_mushrooms": "Потолочные грибы",
+	"block.betternether.neon_equisetum": "Неоновый хвощ",
+	"block.betternether.hook_mushroom": "Цепляющийся гриб",
+	"item.betternether.hook_mushroom_cooked": "Приготовленный цепляющийся гриб"
 }
