Lang & texture compression

--- a/src/main/resources/assets/betternether/lang/ru_ru.json
+++ b/src/main/resources/assets/betternether/lang/ru_ru.json
@@ -371,6 +371,8 @@
 	"biome.betternether.old_fungiwoods": "Старый грибной лес",
 	"biome.betternether.poor_nether_grasslands": "Обеднённые адские луга",
 	"biome.betternether.flooded_deltas": "Затопленные дельты",
+	"biome.betternether.upside_down_forest": "Перевёрнутый лес",
+	"biome.betternether.old_swampland": "Старое болото",
 	
 	"block.betternether.mushroom_fir": "Грибная ель",
 	"block.betternether.mushroom_fir_sapling": "Саженец грибной ели",
