--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -372,7 +372,8 @@
 	"biome.betternether.crimson_pinewood": "Crimson Pinewood",
 	"biome.betternether.old_fungiwoods": "Old Fungiwoods",
 	"biome.betternether.poor_nether_grasslands": "Poor Nether Grasslands",
-	"biome.betternether.flooded_deltas": "Flooded Deltas",
+	"biome.betternether.upside_down_forest": "Upside Down Forest",
+	"biome.betternether.old_swampland": "Old Swampland",
 	
 	"block.betternether.mushroom_fir": "Mushroom Fir",
 	"block.betternether.mushroom_fir_sapling": "Mushroom Fir Sapling",
