Lang fix & texture compression

--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -689,9 +689,9 @@
 	"block.betternether.hook_mushroom": "Hook Mushroom",
 	"item.betternether.hook_mushroom_cooked": "Cooked Hook Mushroom",
 	
-	"item.betternether.whispering_gourd_vine": "Whispering Gourd Seeds",
-	"item.betternether.whispering_gourd": "Whispering Gourd",
-	"item.betternether.whispering_gourd_lantern": "Whispering Gourd Lantern",
+	"block.betternether.whispering_gourd_vine": "Whispering Gourd Seeds",
+	"block.betternether.whispering_gourd": "Whispering Gourd",
+	"block.betternether.whispering_gourd_lantern": "Whispering Gourd Lantern",
 	
 	"block.betternether.willow_torch": "Willow Torch"
 }
