Started french translation

--- a/src/main/resources/assets/betternether/lang/fr_fr.json
+++ b/src/main/resources/assets/betternether/lang/fr_fr.json
@@ -1,44 +1,44 @@
 {
 	"container.forge": "Forge",
-	"container.chest_of_drawers": "Chest of Drawers",
+	"container.chest_of_drawers": "Commode",
 
-	"entity.betternether.firefly": "Firefly",
-	"entity.betternether.hydrogen_jellyfish": "Hydrogen Jellyfish",
-	"entity.betternether.naga_projectile": "Naga Projectile",
+	"entity.betternether.firefly": "Luciole",
+	"entity.betternether.hydrogen_jellyfish": "Méduse à hydrogène",
+	"entity.betternether.naga_projectile": "Projectile de naga",
 	"entity.betternether.naga": "Naga",
-	"item.betternether.spawn_egg_naga": "Naga Spawn Egg",
-	"entity.betternether.flying_pig": "Flying Pig",
-	"item.betternether.spawn_egg_flying_pig": "Flying Pig Spawn Egg",
-	"entity.betternether.jungle_skeleton": "Jungle Skeleton",
-	"item.betternether.spawn_egg_jungle_skeleton": "Jungle Skeleton Spawn Egg",
-	"entity.betternether.skull": "Skull",
-	"item.betternether.spawn_egg_skull": "Skull Spawn Egg",
+	"item.betternether.spawn_egg_naga": "Oeuf d'apparition de naga",
+	"entity.betternether.flying_pig": "Cochon volant",
+	"item.betternether.spawn_egg_flying_pig": "Oeuf d'apparition de cochon volant",
+	"entity.betternether.jungle_skeleton": "Squelette de la jungle",
+	"item.betternether.spawn_egg_jungle_skeleton": "Oeuf d'apparition de squelette de la jungle",
+	"entity.betternether.skull": "Crâne",
+	"item.betternether.spawn_egg_skull": "Oeuf d'apparition de crâne",
 
-	"item.betternether.black_apple": "Black Apple",
+	"item.betternether.black_apple": "Pomme noire",
 
 	"item.betternether.cincinnasite": "Cincinnasite",
-	"item.betternether.cincinnasite_axe": "Cincinnasite Axe",
-	"item.betternether.cincinnasite_axe_diamond": "Cincinnasite-Diamond Axe",
-	"item.betternether.cincinnasite_pickaxe": "Cincinnasite Pickaxe",
-	"item.betternether.cincinnasite_pickaxe_diamond": "Cincinnasite-Diamond Pickaxe",
+	"item.betternether.cincinnasite_axe": "Hache en Cincinnasite",
+	"item.betternether.cincinnasite_axe_diamond": "Hache en Cincinnasite diamantée",
+	"item.betternether.cincinnasite_pickaxe": "Pioche en Cincinnasite",
+	"item.betternether.cincinnasite_pickaxe_diamond": "Pioche en Cincinnasite diamantée",
 
-	"block.betternether.stalagnate_bowl": "Stalagnate Bowl",
-	"item.betternether.stalagnate_bowl": "Stalagnate Bowl",
-	"item.betternether.stalagnate_bowl_apple": "Bowl with Black Apple",
-	"item.betternether.stalagnate_bowl_mushroom": "Mushroom Stew",
-	"item.betternether.stalagnate_bowl_wart": "Wart Soup",
+	"block.betternether.stalagnate_bowl": "Bol en Stalagnate",
+	"item.betternether.stalagnate_bowl": "Bol en Stalagnate",
+	"item.betternether.stalagnate_bowl_apple": "Pomme noire en bol",
+	"item.betternether.stalagnate_bowl_mushroom": "Soupe de champignons",
+	"item.betternether.stalagnate_bowl_wart": "Soupe de verrues",
 
 	"itemGroup.betternether.items": "Better Nether",
 
-	"message.spawn_help": "§c§lYou must hold§r %s §c§lto set your spawn point here",
-	"message.spawn_set": "§2§lYour spawn point was set here",
+	"message.spawn_help": "§c§lVous devez avoir§r %s §c§lpour définir votre point de réapparition ici",
+	"message.spawn_set": "§2§lVotre point de réapparition a été défini ici",
 
 	"block.betternether.agave": "Agave",
 
-	"block.betternether.barrel_cactus": "Barrel Cactus",
+	"block.betternether.barrel_cactus": "Coussin de belle-mère",
 
-	"block.betternether.black_apple_seed": "Black Apple Seed",
-	"block.betternether.black_bush": "Black Bush",
+	"block.betternether.black_apple_seed": "Graines de pomme noire",
+	"block.betternether.black_bush": "Buisson noir",
 	
 	"block.betternether.red_large_mushroom": "Red Large Mushroom",
 	"block.betternether.brown_large_mushroom": "Brown Large Mushroom",
