--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -98,7 +98,7 @@
 
 	"block.betternether.lucis_spore": "Lucis Spore",
 
-	"block.betternether.magma_flower": "Magma flower seed",
+	"block.betternether.magma_flower": "Magma Flower Seed",
 
 	"block.betternether.nether_brick_tile_large": "Large Nether Brick Tile",
 	"block.betternether.nether_brick_tile_slab": "Small Nether Brick Tile Slab",
