--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -339,13 +339,13 @@
 	"block.betternether.chair_wart": "Wart Chair",
 	"block.betternether.chair_cincinnasite": "Cincinnasite Chair",
 	
-	"block.betternether.striped_log_stalagnate": "Striped Stalagnate Log",
-	"block.betternether.striped_log_willow": "Striped Willow Log",
-	"block.betternether.striped_log_wart": "Striped Wart Log",
+	"block.betternether.striped_log_stalagnate": "Stripped Stalagnate Log",
+	"block.betternether.striped_log_willow": "Stripped Willow Log",
+	"block.betternether.striped_log_wart": "Stripped Wart Log",
 	
-	"block.betternether.striped_bark_stalagnate": "Striped Stalagnate Wood",
-	"block.betternether.striped_bark_willow": "Striped Willow Wood",
-	"block.betternether.striped_bark_wart": "Striped Wart Wood",
+	"block.betternether.striped_bark_stalagnate": "Stripped Stalagnate Wood",
+	"block.betternether.striped_bark_willow": "Stripped Willow Wood",
+	"block.betternether.striped_bark_wart": "Stripped Wart Wood",
 	
 	"block.betternether.giant_mold": "Giant Mold",
 	"block.betternether.giant_mold_sapling": "Giant Mold Sapling",
@@ -383,8 +383,8 @@
 	"block.betternether.mushroom_fir_stem": "Mushroom Fir Stem",
 	"block.betternether.mushroom_fir_log": "Mushroom Fir Log",
 	"block.betternether.mushroom_fir_wood": "Mushroom Fir Wood",
-	"block.betternether.striped_log_mushroom_fir": "Striped Mushroom Fir Log",
-	"block.betternether.striped_wood_mushroom_fir": "Striped Mushroom Fir Wood",
+	"block.betternether.striped_log_mushroom_fir": "Stripped Mushroom Fir Log",
+	"block.betternether.striped_wood_mushroom_fir": "Stripped Mushroom Fir Wood",
 	"block.betternether.mushroom_fir_planks": "Mushroom Fir Planks",
 	"block.betternether.mushroom_fir_stairs": "Mushroom Fir Stairs",
 	"block.betternether.mushroom_fir_slab": "Mushroom Fir Slab",
@@ -449,8 +449,8 @@
 	"item.betternether.spawn_egg_hydrogen_jellyfish": "Hydrogen Jellyfish Spawn Egg",
 	"block.betternether.brick_pot": "Brick Pot",
 	
-	"block.betternether.striped_log_rubeus": "Striped Rubeus Log",
-	"block.betternether.striped_bark_rubeus": "Striped Rubeus Bark",
+	"block.betternether.striped_log_rubeus": "Stripped Rubeus Log",
+	"block.betternether.striped_bark_rubeus": "Stripped Rubeus Bark",
 	"block.betternether.rubeus_cone": "Rubeus Cone",
 	"block.betternether.rubeus_sapling": "Rubeus Sapling",
 	"block.betternether.rubeus_log": "Rubeus Log",
@@ -648,8 +648,8 @@
 	"block.betternether.chest_anchor_tree": "Anchor Tree Chest",
 	"block.betternether.crafting_table_anchor_tree": "Anchor Tree Crafting Table",
 	"block.betternether.sign_anchor_tree": "Anchor Tree Sign",
-	"block.betternether.striped_bark_anchor_tree": "Anchor Tree Striped Bark",
-	"block.betternether.striped_log_anchor_tree": "Anchor Tree Striped Log",
+	"block.betternether.striped_bark_anchor_tree": "Anchor Tree Stripped Bark",
+	"block.betternether.striped_log_anchor_tree": "Anchor Tree Stripped Log",
 	"block.betternether.taburet_anchor_tree": "Anchor Tree Taburet",
 	
 	"block.betternether.anchor_tree_vine": "Anchor Tree Vine",
@@ -677,8 +677,8 @@
 	"block.betternether.chest_nether_sakura": "Nether Sakura Chest",
 	"block.betternether.crafting_table_nether_sakura": "Nether Sakura Crafting Table",
 	"block.betternether.sign_nether_sakura": "Nether Sakura Sign",
-	"block.betternether.striped_bark_nether_sakura": "Nether Sakura Striped Bark",
-	"block.betternether.striped_log_nether_sakura": "Nether Sakura Striped Log",
+	"block.betternether.striped_bark_nether_sakura": "Nether Sakura Stripped Bark",
+	"block.betternether.striped_log_nether_sakura": "Nether Sakura Stripped Log",
 	"block.betternether.taburet_nether_sakura": "Nether Sakura Taburet",
 	
 	"block.betternether.nether_sakura_leaves": "Nether Sakura Leaves",
