--- a/src/main/resources/assets/betternether/lang/ru_ru.json
+++ b/src/main/resources/assets/betternether/lang/ru_ru.json
@@ -11,6 +11,8 @@
 	"item.betternether.spawn_egg_flying_pig": "Яйцо призыва летающей свиньи",
 	"entity.betternether.jungle_skeleton": "Скелет джунглей",
 	"item.betternether.spawn_egg_jungle_skeleton": "Яйцо призыва скелета джунглей",
+	"entity.betternether.skull": "Череп",
+	"item.betternether.spawn_egg_skull": "Яйцо призыва черепа",
 
 	"item.betternether.black_apple": "Чёрное яблоко",
 
