--- a/src/main/resources/assets/betternether/lang/zh_cn.json
+++ b/src/main/resources/assets/betternether/lang/zh_cn.json
@@ -159,16 +159,16 @@
 
 	"block.betternether.red_mold": "红色霉菌",
 
-	"block.betternether.reeds_block": "芦苇块",
-	"block.betternether.reeds_button": "芦苇按钮",
-	"block.betternether.reeds_fence": "芦苇木栅栏",
-	"block.betternether.reeds_gate": "芦苇木栅栏门",
-	"block.betternether.reeds_ladder": "芦苇木梯子",
-	"block.betternether.reeds_plate": "芦苇压力板",
-	"block.betternether.reeds_slab": "芦苇台阶",
-	"block.betternether.reeds_stairs": "芦苇楼梯",
-	"block.betternether.reeds_door": "芦苇木门",
-	"block.betternether.reeds_trapdoor": "芦苇活板门",
+	"block.betternether.reeds_block": "下界芦苇块",
+	"block.betternether.reeds_button": "下界芦苇按钮",
+	"block.betternether.reeds_fence": "下界芦苇木栅栏",
+	"block.betternether.reeds_gate": "下界芦苇木栅栏门",
+	"block.betternether.reeds_ladder": "下界芦苇木梯子",
+	"block.betternether.reeds_plate": "下界芦苇压力板",
+	"block.betternether.reeds_slab": "下界芦苇台阶",
+	"block.betternether.reeds_stairs": "下界芦苇楼梯",
+	"block.betternether.reeds_door": "下界芦苇木门",
+	"block.betternether.reeds_trapdoor": "下界芦苇活板门",
 
 	"block.betternether.smoker": "烟菇",
 
@@ -304,9 +304,9 @@
 	"block.betternether.wall_mushroom_brown": "墙棕色菇",
 	"block.betternether.wall_mushroom_red": "墙红色菇",
 	
-	"block.betternether.roof_tile_reeds": "芦苇屋面瓦",
-	"block.betternether.roof_tile_reeds_stairs": "芦苇屋面瓦楼梯",
-	"block.betternether.roof_tile_reeds_slab": "芦苇屋面瓦台阶",
+	"block.betternether.roof_tile_reeds": "下界芦苇屋面瓦",
+	"block.betternether.roof_tile_reeds_stairs": "下界芦苇屋面瓦楼梯",
+	"block.betternether.roof_tile_reeds_slab": "下界芦苇屋面瓦台阶",
 	"block.betternether.roof_tile_stalagnate": "石结木屋面瓦",
 	"block.betternether.roof_tile_stalagnate_stairs": "石结木屋面瓦楼梯",
 	"block.betternether.roof_tile_stalagnate_slab": "石结木屋面瓦台阶",
@@ -323,7 +323,7 @@
 	"block.betternether.roof_tile_wart_stairs": "下界疣屋面瓦楼梯",
 	"block.betternether.roof_tile_wart_slab": "下界疣屋面瓦台阶",
 	
-	"block.betternether.taburet_reeds": "芦苇凳子",
+	"block.betternether.taburet_reeds": "下界芦苇凳子",
 	"block.betternether.taburet_stalagnate": "石结木凳子",
 	"block.betternether.taburet_willow": "下界柳木凳子",
 	"block.betternether.taburet_wart": "下界疣凳子",
@@ -333,7 +333,7 @@
 	"block.betternether.willow_ladder": "下界柳木梯子",
 	"block.betternether.wart_ladder": "下界疣木梯子",
 	
-	"block.betternether.chair_reeds": "芦苇椅子",
+	"block.betternether.chair_reeds": "下界芦苇椅子",
 	"block.betternether.chair_stalagnate": "石结木椅子",
 	"block.betternether.chair_willow": "下界柳木椅子",
 	"block.betternether.chair_wart": "下界疣椅子",
@@ -350,7 +350,7 @@
 	"block.betternether.giant_mold": "巨霉菌",
 	"block.betternether.giant_mold_sapling": "巨霉菌幼苗",
 	
-	"block.betternether.bar_stool_reeds": "芦苇高脚凳",
+	"block.betternether.bar_stool_reeds": "下界芦苇高脚凳",
 	"block.betternether.bar_stool_stalagnate": "石结木高脚凳",
 	"block.betternether.bar_stool_willow": "下界柳木高脚凳",
 	"block.betternether.bar_stool_wart": "下界疣高脚凳",
@@ -414,7 +414,7 @@
 	"block.betternether.blue_obsidian_bricks_stairs": "蓝色黑曜石砖楼梯",
 	"block.betternether.blue_obsidian_bricks_slab": "蓝色黑曜石砖台阶",
 	"block.betternether.blue_obsidian_tile": "蓝色黑曜石瓷砖",
-	"block.betternether.blue_obsidian_tile_small": "蓝色曜石小瓷砖",
+	"block.betternether.blue_obsidian_tile_small": "蓝色黑曜石小瓷砖",
 	"block.betternether.blue_obsidian_tile_stairs": "蓝色黑曜石瓷砖楼梯",
 	"block.betternether.blue_obsidian_tile_slab": "蓝色黑曜石瓷砖台阶",
 	"block.betternether.blue_obsidian_glass": "蓝色黑曜石玻璃",
@@ -543,7 +543,7 @@
 	"block.betternether.crafting_table_warped": "诡异木工作台",
 	
 	"block.betternether.crafting_table_stalagnate": "石结木工作台",
-	"block.betternether.crafting_table_reed": "芦苇工作台",
+	"block.betternether.crafting_table_reed": "下界芦苇工作台",
 	"block.betternether.crafting_table_willow": "下界柳木工作台",
 	"block.betternether.crafting_table_wart": "下界疣工作台",
 	"block.betternether.crafting_table_rubeus": "宝红木工作台",
@@ -551,7 +551,7 @@
 	"block.betternether.crafting_table_mushroom_fir": "下界冷杉菇木工作台",
 	
 	"block.betternether.chest_stalagnate": "石结木箱子",
-	"block.betternether.chest_reed": "芦苇箱子",
+	"block.betternether.chest_reed": "下界芦苇箱子",
 	"block.betternether.chest_willow": "下界柳木箱子",
 	"block.betternether.chest_wart": "下界疣箱子",
 	"block.betternether.chest_rubeus": "宝红木箱子",
@@ -566,7 +566,7 @@
 	"block.betternether.feather_fern": "毛蕨",
 	
 	"block.betternether.sign_stalagnate": "石结木告示牌",
-	"block.betternether.sign_reed": "芦苇告示牌",
+	"block.betternether.sign_reed": "下界芦苇告示牌",
 	"block.betternether.sign_willow": "下界柳木告示牌",
 	"block.betternether.sign_wart": "下界疣告示牌",
 	"block.betternether.sign_rubeus": "宝红木告示牌",
@@ -574,7 +574,7 @@
 	"block.betternether.sign_mushroom_fir": "下界冷杉菇木告示牌",
 	
 	"block.betternether.barrel_stalagnate": "石结木桶",
-	"block.betternether.barrel_reed": "芦苇桶",
+	"block.betternether.barrel_reed": "下界芦苇桶",
 	"block.betternether.barrel_willow": "下界柳木桶",
 	"block.betternether.barrel_wart": "下界疣桶",
 	"block.betternether.barrel_rubeus": "宝红木桶",
